[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Images/arrow.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlatformController.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.02, 0.3, 0.6 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.988235, 0.427451, 0, 1 )

[sub_resource type="CylinderMesh" id=3]
material = SubResource( 2 )
top_radius = 0.1
bottom_radius = 0.1
height = 0.07

[sub_resource type="CylinderShape" id=4]
radius = 0.1
height = 0.1

[node name="PlatformController" type="MeshInstance"]
mesh = SubResource( 1 )
material/0 = null
script = ExtResource( 2 )

[node name="ElevateButton" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.04, 0, 0.15 )
mesh = SubResource( 3 )
material/0 = null

[node name="Sprite3D" type="Sprite3D" parent="ElevateButton"]
transform = Transform( -8.74228e-09, -0.2, -8.74228e-09, 0, -8.74228e-09, 0.2, -0.2, 8.74228e-09, 3.82137e-16, -1.11022e-16, 0.0351709, 0 )
texture = ExtResource( 1 )

[node name="ElevateButtonArea" type="Area" parent="ElevateButton"]

[node name="CollisionShape" type="CollisionShape" parent="ElevateButton/ElevateButtonArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0139093, 0 )
shape = SubResource( 4 )

[node name="LowerButton" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.04, 0, -0.15 )
mesh = SubResource( 3 )
material/0 = null

[node name="Sprite3D" type="Sprite3D" parent="LowerButton"]
transform = Transform( -8.74228e-09, 0.2, -8.74228e-09, 0, -8.74228e-09, -0.2, -0.2, -8.74228e-09, 3.82137e-16, 0, 0.0373998, 0 )
texture = ExtResource( 1 )

[node name="LowerButtonArea" type="Area" parent="LowerButton"]

[node name="CollisionShape" type="CollisionShape" parent="LowerButton/LowerButtonArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0139093, 0 )
shape = SubResource( 4 )

[connection signal="area_entered" from="ElevateButton/ElevateButtonArea" to="." method="_on_ElevateButtonArea_area_entered"]
[connection signal="area_exited" from="ElevateButton/ElevateButtonArea" to="." method="_on_ElevateButtonArea_area_exited"]
[connection signal="area_entered" from="LowerButton/LowerButtonArea" to="." method="_on_LowerButtonArea_area_entered"]
[connection signal="area_exited" from="LowerButton/LowerButtonArea" to="." method="_on_LowerButtonArea_area_exited"]
